[gd_scene load_steps=8 format=2]

[ext_resource path="res://Shop/Shop.gd" type="Script" id=1]
[ext_resource path="res://Props/tileset.png" type="Texture" id=2]
[ext_resource path="res://Fonts/FontResource.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sound/shopkeeper.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[node name="Shop" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Shopkeeper" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 8, 10 )
shape = SubResource( 1 )

[node name="InteractionZone" type="Area2D" parent="."]
position = Vector2( 32, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionZone"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -43.0
margin_right = 160.0
margin_bottom = -27.0
grow_vertical = 0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "meow"
align = 1
valign = 2
autowrap = true

[node name="ShopkeeperTalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
[connection signal="body_entered" from="InteractionZone" to="." method="_on_InteractionZone_body_entered"]
[connection signal="body_exited" from="InteractionZone" to="." method="_on_InteractionZone_body_exited"]
